<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ff00"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CaloriesActivity">

    <TextView
        android:id="@+id/calories_burned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/calories_burned_0"
        android:textColor="#607D8B"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/weigh_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/enter_your_weigh_kg"
        android:inputType="number"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:minHeight="60dp"
        android:padding="16dp"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:minHeight="60dp"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="24sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:minHeight="60dp"
        android:padding="16dp"
        android:text="@string/back"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="24sp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>